fix: CodeRabbit 리뷰 반영 (비밀번호 정책·비활성 차단·중복 경합 방어·예외 처리·JWT fail-closed·DB CHECK 제약·secret 외부화)