@@ -2,10 +2,10 @@ package com.gieun.commerce.global.security;
 
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
+import com.gieun.commerce.domain.user.entity.Role;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import java.io.IOException;
-import java.util.Collections;
 import java.util.List;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
@@ -34,17 +34,27 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
       Long userId = jwtTokenProvider.getUserId(token);
       String role = jwtTokenProvider.getRole(token);
 
-      List<SimpleGrantedAuthority> authorities = (role != null)
-          ? List.of(new SimpleGrantedAuthority("ROLE_" + role))
-          : Collections.emptyList();
-
-      UsernamePasswordAuthenticationToken authentication =
-          new UsernamePasswordAuthenticationToken(userId, null, authorities);
-
-      SecurityContextHolder.getContext().setAuthentication(authentication);
+      if (isValidRole(role)) {
+        UsernamePasswordAuthenticationToken authentication =
+            new UsernamePasswordAuthenticationToken(
+                userId, null, List.of(new SimpleGrantedAuthority("ROLE_" + role)));
+        SecurityContextHolder.getContext().setAuthentication(authentication);
+      }
     }
 
     filterChain.doFilter(request, response);
+  }
+
+  private boolean isValidRole(String role) {
+    if (role == null) {
+      return false;
+    }
+    try {
+      Role.valueOf(role);
+      return true;
+    } catch (IllegalArgumentException e) {
+      return false;
+    }
   }
 
   private String resolveToken(HttpServletRequest request) {
